<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ms_white"
    android:id="@+id/widget_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_widget_recipe_title"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/margin"
        android:textStyle="bold"
        tools:text="title"/>

</LinearLayout>