<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView android:id="@+id/iv_recipe_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/recipe_image_height"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/recipe_image_description"
        tools:src="@drawable/default_image"/>

    <TextView
        android:id="@+id/tv_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        tools:text="recipe mock text" />


</LinearLayout>